--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Simple plugin to replace non-ASCII characters to ASCII by removing accents, and remaining non-ASCII characters.",
 	"version": "0.0.1",
 	"publisher": "SamelCharpentier",
-	"repository":""
+	"repository":"scharpentier0/remove-non-ascii-chars",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
