--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "remove-non-ascii-chars",
 	"displayName": "Remove Non ASCII Chars",
 	"description": "Simple plugin to replace non-ASCII characters to ASCII by removing accents, and remaining non-ASCII characters.",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"publisher": "SamelCharpentier",
 	"repository": "scharpentier0/remove-non-ascii-chars",
 	"engines": {
@@ -12,7 +12,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"*"
+		"onCommand:remove-non-ascii-chars.removeNonAsciiInSelectionOrFile",
+		"onCommand:remove-non-ascii-chars.removeNonAsciiInEntireFile"
 	],
 	"main": "./extension.js",
 	"contributes": {
