--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "remove-non-ascii-chars",
 	"displayName": "Remove Non ASCII Chars",
 	"description": "Simple plugin to replace non-ASCII characters to ASCII by removing accents, and remaining non-ASCII characters.",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"publisher": "SamuelCharpentier",
 	"repository": "scharpentier0/remove-non-ascii-chars",
 	"engines": {
@@ -15,6 +15,11 @@
 		"onCommand:remove-non-ascii-chars.removeNonAsciiInSelectionOrFile",
 		"onCommand:remove-non-ascii-chars.removeNonAsciiInEntireFile"
 	],
+	"capabilities": {
+		"untrustedWorkspaces": {
+			"supported": true
+		}
+	},
 	"main": "./extension.js",
 	"contributes": {
 		"commands": [
